# lora-for-retrieval

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: loraforretrieval_ci.yml
asymmetric/: README.md  dense_retriever.py  eval_beir.py  generate_dense_embeddings.py  requirements.txt  train_dense_encoder.py
asymmetric/conf/: dense_retriever.yaml
asymmetric/conf/ctx_sources/: default_sources.yaml
asymmetric/conf/datasets/: encoder_train_default.yaml  retriever_default.yaml
asymmetric/conf/encoder/: hf_bert.yaml  hf_lora_bert.yaml  infer.hf_bert.yaml  infer.hf_lora_bert.yaml
asymmetric/dpr/data/: retriever_data.py
asymmetric/dpr/models/: __init__.py  biencoder.py  hf_models.py
asymmetric/dpr/utils/: dist_utils.py
late-interaction/: msmarco_eval.py  readme.md  train.py
symmetric/: README.md  eval_beir.py  model.py  peft_model.py  requirements.txt  train.py
symmetric/config/: bert_base.full.w_neg.json  bert_base.full.wo_neg.json  bert_base.lora.w_neg.json  bert_base.lora.wo_neg.json
symmetric/src/: contriever.py  roberta_contriever.py  utils.py
tests/: test_github_ci.py
